MSCA-333 - fixing related content styles & config and tweaking spacing of sponsors

--- a/docroot/themes/msca_theme/sass/components/_events.scss
+++ b/docroot/themes/msca_theme/sass/components/_events.scss
@@ -15,6 +15,11 @@ aside .date-square {
   margin-top: 3rem;
 }
 
+.page-node-type-education-events .row.sponsors {
+  margin-top: 0;
+  margin-bottom: 5rem;
+}
+
 .page-node-type-education-events .social-links {
   margin: 1rem auto;
   display: table;
