--- a/docroot/themes/msca_theme/sass/components/_related_content.scss
+++ b/docroot/themes/msca_theme/sass/components/_related_content.scss
@@ -73,3 +73,7 @@
   font-size: .8rem;
   line-height: 1;
 }
+
+.site-pre-footer .related-content-article {
+  @extend .col-md-4;
+}
