--- a/docroot/themes/msca_theme/sass/views/_sponsors.scss
+++ b/docroot/themes/msca_theme/sass/views/_sponsors.scss
@@ -40,7 +40,6 @@
 }
 
 .header-image.sponsors {
-  margin-bottom: 2rem;
   padding-left: 75px;
   padding-right: 75px;
 }
